kustomize/overlays/vlfk-no/alpha/middleware.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: Middleware
metadata:
  name: auth-forward
spec:
  forwardAuth:
    address: http://fint-flyt-auth-forward.vlfk-no:8080/alpha/_oauth
