kustomize/overlays/vlfk-no/alpha/ingress-route.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: auth-forward
spec:
  entryPoints:
    - web
  routes:
    - match: Host(`flyt.vigoiks.no`) && PathPrefix(`/alpha/vlfk-no/_oauth`)
      kind: Rule
      services:
        - name: fint-flyt-auth-forward
          port: 8080
